# ImageProcessor

./: CMakeLists.txt  ImageProcessor  README.md
include/: ImageProcessor.hpp
src/: ImageProcessor.cpp  main.cpp
